# bike

./: .gitignore  Cargo.toml  build.gradle  build.rs
bike-bt/: Cargo.toml
bike-bt/src/: bluetooth.rs  bluetooth_error.rs  bluetooth_status.rs  connected_device.rs  device.rs  lib.rs
bike-ui/: Cargo.toml  build.rs
bike-ui/data/resources/: resources.gresource.xml
bike-ui/src/: app_data.rs  brokers.rs  main.rs  state_manager.rs
bike-ui/src/components/: app.rs  bluetooth_button.rs  header.rs  mod.rs
bike-ui/src/components/active_device_details/: active_device_details.rs  mod.rs  view.rs
bike-ui/src/components/bluetooth_button/: button.rs  connect_dialog.rs  connect_window.rs  device_listing.rs  mod.rs
bike-ui/src/components/connect_dialog/: connect_dialog.rs  device_discovery_listener.rs  device_listing.rs  dialog.rs  mod.rs
data/resources/: resources.xml
data/resources/ui/: bluetooth_button.ui  connect_dialog.ui  device_details_page.ui  device_listing.ui  window.ui
src/: main.rs
src/bluetooth/: device.rs  mod.rs  service.rs
src/components/: app.rs  bluetooth_button.rs  bt_connection.rs  connect_dialog.rs  device_details_page.rs  device_listing.rs  header.rs  mod.rs  window.rs
src/main/java/io/github/andreibachim/bike/: Main.java
src/main/java/io/github/andreibachim/bike/bluetooth/: BtDevice.java  BtService.java
src/main/resources/: resources.gresource  resources.xml
src/main/resources/ui/: window.ui
src/main/resources/ui/components/dialogs/: connect.ui
src/singletons/: bluetooth.rs  mod.rs
src/view/: mod.rs
src/view/pages/: mod.rs
(+4 files in other folders)
