[package]
name = "bike"
version = "0.1.0"
edition = "2021"

[dependencies]
gtk = { package = "gtk4", version = "0.9.2", features = ["v4_16"] }
adw = { package = "libadwaita", version = "0.7.0", features = ["v1_6"] }
bluer = { version = "0.17.3" , features = ["bluetoothd"] }
tokio = { version = "1.41.0", features = ["rt-multi-thread"] }
