[package]
name = "bike"
version = "0.1.0"
edition = "2024"

[dependencies]
gtk = { package = "gtk4", version = "0.9.6", features = ["gnome_47"] }
adw = { package = "libadwaita", version = "0.7.1", features = ["v1_6"] } 
log = "0.4.26"
env_logger = "0.11.7"
once_cell = "1.21.1"

[build-dependencies]
glib-build-tools = "0.20.0"

